# MicroAI-Paygate

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  README.md  RULES.md  SECURITY.md  SUPPORT.md  docker-compose.yml  package.json  run_e2e.sh
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql-analysis.yml  e2e.yml  go-lint.yml  go-tests.yml  issue-triage.yml  pr-branch-check.yml  pr-labeler.yml  rust-lint.yml  rust-tests.yml  sdk-tests.yml  stale.yml  star-greeting.yml  web-lint-build.yml
bench/: README.md  RESULTS-2026-05-13.txt  bench.sh
deploy/fly/: gateway.fly.toml  verifier.fly.toml
gateway/: Dockerfile  README.md  cache.go  config_test.go  correlation_test.go  errors.go  errors_test.go  go.mod  main.go  main_test.go  middleware.go  openapi.yaml  openapi_test.go  prompt_validation.go  prompt_validation_test.go  receipt.go  receipt_redis_store.go  receipt_store.go  receipt_store_integration_test.go  receipt_test.go  redis.go  redis_receipt_store_test.go  routes.go
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/examples/: summarize.ts
sdk/typescript/src/: base64.ts  client.ts  errors.ts  index.ts  payment.ts  (+1 more)
tests/: README.md  e2e.test.ts
verifier/: .env.example  Cargo.toml  Dockerfile  README.md
verifier/src/: main.rs
web/: Dockerfile  README.md  mdx-components.tsx  next.config.ts  package.json  tsconfig.json
web/scripts/: deployed-smoke-test.ts
(+39 files in other folders)
