[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = "2.0"
hex = "0.4"
# Combined tower entries into one line
tower = { version = "0.5", features = ["util"] } 
tower-http = { version = "0.6", features = ["limit"] }
dashmap = "6.1.0"

[dev-dependencies]
# Optional: move testing-only tools here if they aren't needed for the main build
# tower = { version = "0.5", features = ["util"] }